<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_home"
            android:icon="@drawable/ic_home"
            android:title="@string/txt_title_inicio" />

        <item
            android:id="@+id/nav_item_calendario"
            android:icon="@drawable/ic_calendar"
            android:title="@string/txt_title_calendario" />

        <item
            android:id="@+id/nav_item_explorar"
            android:icon="@drawable/ic_compass"
            android:title="@string/txt_title_explorar" />

        <item
            android:id="@+id/nav_item_config"
            android:icon="@drawable/ic_settings"
            android:title="@string/txt_title_config" />
    </group>

    <group
        android:id="@+id/out"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_item_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/txt_title_salir" />
    </group>
</menu>